# anubis

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  VERSION  anubis.go  docker-bake.hcl  errors.go  go.mod  go.sum  package-lock.json  package.json
.devcontainer/: devcontainer.json  docker-compose.yaml  poststart.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  security.md
.github/workflows/: asset-verification.yml  docker-pr.yml  docker.yml  docs-deploy.yml  docs-test.yml  go-mod-tidy-check.yml  go.yml  package-builds-stable.yml  package-builds-unstable.yml  smoke-tests.yml  ssh-ci-runner-cron.yml  ssh-ci.yml  zizmor.yml
cmd/anubis/: botPolicies.json  main.go
cmd/containerbuild/: main.go
cmd/osiris/: main.go  (+1 more)
cryptography/: yeetfile.js
data/: botPolicies.json  botPolicies.yaml  embed.go
decaymap/: decaymap.go  decaymap_test.go
docker/: anubis.Dockerfile  osiris.Dockerfile
docs/: docusaurus.config.ts  package-lock.json  package.json
internal/: headers.go  listor.go  log.go
lib/: anubis.go  anubis_test.go  config.go  config_test.go  http.go  http_test.go  redirect_security_test.go  verifier.go  verifier_test.go
test/: go.mod  go.sum
wasm/: wasm.go  wasm_test.go
wasm/pow/argon2id/: Cargo.toml
wasm/pow/argon2id/src/: lib.rs
wasm/pow/equix/: Cargo.toml
wasm/pow/equix/src/: lib.rs
wasm/pow/sha256/: Cargo.toml  run.html  run.js
wasm/pow/sha256/src/: lib.rs
web/: build.sh  index.go  index.templ  index_templ.go
xess/: xess.go
(+316 files in other folders)
